[package]
name = "timer-queue"
version = "0.2.0"
edition = "2021"
description = "Pure, minimal, and scalable timers"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/Ralith/timer-queue"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde", "slab/serde"]

[dependencies]
slab = { version = "0.4.7", default-features = false }
serde = { version = "1.0.217", optional = true }

[dev-dependencies]
proptest = "1"
criterion = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }
bincode = { version = "1.3.3" }

[[bench]]
name = "bench"
harness = false
